--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,9 @@
 		<grpc.kotlin.version>1.1.0</grpc.kotlin.version>
 		<protobuf.version>3.17.2</protobuf.version>
 		<bcrypt.version>0.4</bcrypt.version>
+		<hibernate-spatial.version>5.5.6.Final</hibernate-spatial.version>
+		<jackson-datatype-jts.version>1.0-2.7</jackson-datatype-jts.version>
+		<jts-core.version>1.18.1</jts-core.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,6 +51,21 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-spatial</artifactId>
+			<version>${hibernate-spatial.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.graphhopper.external</groupId>
+			<artifactId>jackson-datatype-jts</artifactId>
+			<version>${jackson-datatype-jts.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.locationtech.jts</groupId>
+			<artifactId>jts-core</artifactId>
+			<version>${jts-core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
